--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,6 +8,8 @@
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
             <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
             <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+            <script src="{% static 'js/post_detail.js' %}"></script>
+
         </head>
     <body>
         <div class="page-header">
