--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,11 +3,11 @@
 {% block content %}
 
     <form method="get">
-        {{ posts.form.as_table }}
+        {{ posts_form.form.as_table }}
         <button type="submit">Search</button>
     </form>
 
-    {% for post in posts.qs %}
+    {% for post in posts %}
         <div class="post">
             <div class="date">
                 {{ post.published_date }}
@@ -26,6 +26,25 @@
                 <hr class="post">
 
         </div>
+
     {% endfor %}
+
+    <div class="pagination">
+        <span class="step-links">
+            {% if posts.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ posts.previous_page_number }}">previous</a>
+            {% endif %}
+
+            <span class="current">
+                Page {{ posts.number }} of {{ posts.paginator.num_pages }}.
+            </span>
+
+            {% if posts.has_next %}
+                <a href="?page={{ posts.next_page_number }}">next</a>
+                <a href="?page={{ posts.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
+        </span>
+    </div>
 
 {% endblock content %}
