Reverse order posts

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -31,8 +31,10 @@
               <p>
                 <button type="button" class="btn btn-default btn-sm">
                 <span class="glyphicon glyphicon-heart"></span> Heart
+                            </button>
+
               </p>
-        </button>
+        <button>
 
        {% if liked %}
        <i class="heart-shaped fa fa-heart" style="display: line-block"></i>
