--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -43,7 +43,7 @@
 <hr>
 
 <div>
-{% for comment in post.comments.all %}
+{% for comment in post.comments.all|dictsortreversed:"created_date" %}
     {% if user.is_authenticated or comment.approved_comment %}
     <div class="comment">
         <div class="date">
