--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,5 +1,6 @@
 {% extends 'blog/base.html' %}
 
+
 {% block content %}
 
     <div class="date">
@@ -40,6 +41,14 @@
 
 </div>
 
+
+
+
+ <div id='container'> Chart will be rendered here </div>
+
+
+
+
 <ul>
     <li>A: {{ post.answer_a }}</li>
     <li>B: {{ post.answer_b }}</li>
@@ -55,6 +64,8 @@
 <input type="radio" name="answer" value="B" />B<br>
 <input type="radio" name="answer" value="C" />C<br>
 </form>
+
+
 
 {% if post.user_choice %}
 <p> Your answer is: {{post.user_choice}} </p>
